# bcm_tech_sessions

./: .gitignore
2024-02-22-pytest/: README.md  pytest.ini  setup.cfg
2024-02-22-pytest/pytest_demo/examples/fixtures/: caplog.py  custom_fixture.py  tmp_path.py
2024-02-22-pytest/pytest_demo/examples/functions/: deprecated_call.py  raises.py  warns.py
2024-02-22-pytest/pytest_demo/examples/marks/: custom_marks.py  skip.py  xfail.py
2024-02-22-pytest/tests/: conftest.py
2024-02-22-pytest/tests/examples/fixtures/: test_caplog.py  test_custom_fixture.py  test_tmp_path.py
2024-02-22-pytest/tests/examples/functions/: test_deprecated_call.py  test_raises.py  test_warns.py
2024-02-22-pytest/tests/examples/marks/: test_custom_marks.py  test_skip.py  test_xfail.py
pytest/: mathematics.py
pytest/tests/: test_math.py
