[metadata]
name = pytest_demo
version = 1.0.0
description = Demo follow along for pytest
long_description = file:README.md
url = https://github.com/BCM-HGSC/bhaou_catapult
license = MIT
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
# The package names (import):
python_requires = >=3.9, <3.13
packages = find:
include_package_data = True

install_requires =
    pytest

[bdist_wheel]
universal = 1

[aliases]
test = pytest